2014-12-06  Yury Aliaev  <mutab0r@rambler.ru>
	* app/audio.c, app/cheat-sheet.c, app/drivers/jack-output.c,
	app/file-operations.c, app/gui-subs.[ch], app/gui.c,
	app/instrument-editor.c, app/keys.c, app/preferences.c,
	app/sample-editor.c, app/xm.c: A small bug with error/warning dialogs is
	fixed.

2014-11-26  Yury Aliaev  <mutab0r@rambler.ru>
	* app/drivers/oss.c: Fixed a crash because of incorrect buffer size.

2014-11-22  Yury Aliaev  <mutab0r@rambler.ru>
	* app/envelope-box.c: Bugfix (loop and sustain points are preserved
	when changing current instrument).

2014-06-01  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c: fixed switching to tracker after current module saving
	from a page other than tracker.

2014-04-12  Yury Aliaev  <mutab0r@rambler.ru>
	* app/file-operations.[ch], app/gui.c, app/instrument-editor.c,
	app/sample-editor.c: switching back from file operations page
	is improved;
	* app/instrument-editor.c: module is marked as modified when a new
	instrument has been loaded.

2014-02-25  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c: small GUI fixes.

2013-11-22  Yury Aliaev  <mutab0r@rambler.ru>
	* app/audioconfig.c: Postponed bugfix and code cleanup.

2013-10-27  Yury Aliaev  <mutab0r@rambler.ru>
	* app/mixers/kbfloat-mix.c: Removed unused NO_GASP conditional;
	* app/audio.[ch], app/audioconfig.c, app/driver-inout.h, app/driver.h,
	app/sample-editor.[ch], app/drivers/alsa1x.c, app/drivers/dsound-output.c,
	app/drivers/dummy-drivers.c, app/drivers/esd-output.c,
	app/drivers/file-output.c, app/drivers/irix-output.c, app/drivers/oss.c,
	app/drivers/sdl-output.c: Drivers API is cleaned up and extended for
	the upcoming JACK driver ("activate" and "deactivate" methods are added).

2013-10-16  Yury Aliaev  <mutab0r@rambler.ru>
	* configure.in: Fixed compilation with --no-asm option.

2013-10-13  Yury Aliaev  <mutab0r@rambler.ru>
	* po/*: Upgrade to gettext-0.18.2, clean-ups;
	* app/audio.c, app/audioconfig.c, app/gui.c, app/sample-editor.c,